# job-score-for-mail-system-20250914

./: .dockerignore  .editorconfig  .env.docker  .env.example  .env.production  .eslintrc.json  .flake8  .gitignore  .prettierignore  AGENT.md  API_DOCUMENTATION.md  ARCHIVE-NOTICE.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  Dockerfile  E2E_TESTING_GUIDE.md  FINAL_PRODUCTION_READINESS_REPORT.md  Makefile  PROJECT_100_PERCENT_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  README.md  SPECIFICATION_COMPLIANCE_REPORT.md  SUPABASE_DEPLOYMENT_GUIDE.md  TDD_IMPLEMENTATION_SUMMARY.md  TDD_USER_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  TESTING.md  database_schema.sql  docker-compose.override.yml  docker-compose.yml  mcp-config.json  next.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  security-config.yaml  supabase_evaluation_report.md  (+4 more)
.001_automation/:  specs.md  QUICKSTART.md  README.md  auto-specs.md  config.env.example  continue_prompt.txt  monitor_refresh.sh  setup.sh  test_detection.sh  test_todowrite_enforcement.sh
.claude/: README.md  commands.json  config.json  conversation-template.md
.devcontainer/: devcontainer.json  docker-compose.yml
.serena/: project.yml
backend/: .env.example  .flake8  .gitignore  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  MIGRATION_T002_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PROGRESS_REPORT.md  README.md  README_SUPABASE_DEPLOYMENT.md  REFACTOR_REPORT_T010_T013.md  REFACTOR_SUMMARY_T003_T004.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TDD_CYCLE_SUMMARY_T028.md  TDD_CYCLE_SUMMARY_T030.md  TDD_DATABASE_IMPLEMENTATION_SUMMARY.md  TDD_IMPLEMENTATION_STATUS.md  TDD_T003_T004_IMPLEMENTATION_SUMMARY.md  TDD_T031_IMPLEMENTATION_SUMMARY.md  app_refactored.py  delivery_report.md  development.db  email_delivery_simulation.py  generate_sample_email.py  import_master_data_sqlite.py  pyproject.toml  pytest.ini  requirements.txt  requirements_scoring.txt  run_contract_tests.py  sample_email.html  setup_scoring.sh  test_all_endpoints_tdd.py  test_api_endpoints_simple.py  test_batch_red_phase.py  test_data_flow.py  test_green_phase.py  test_health_direct.py  test_health_manual.py  test_health_simple.py  (+29 more)
claudedocs/: T051-dashboard-e2e-red-analysis.md  conversation-20250917.md
data/: city_view.csv  employment_type_view.csv  feature_view.csv  occupation_view.csv  prefecture_view.csv  salary_type_view.csv  semrush_kw20250824_sample.csv
database/: setup_guide.md
deployment/: production.config.md
docs/: 20250105_file_naming_rules_v1.0.md  20250105_file_structure_changes.md  20250105_simple_guide_v1.0.md  operations.md
front/: package-lock.json  package.json
frontend/: .env.local.example  .env.production.example  .eslintrc.json  Dockerfile  ROUTING_ARCHITECTURE.md  jest.config.js  jest.setup.js  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tsconfig.json  vercel.json
frontend-backup/: README.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
scripts/: run-security-tests.sh  save-cursor-chat.sh  update-manual.sh  validate.sh
specs/: business_specification.md  frontend_er_viewer_spec.md  system_specification_v2.md
supabase/: config.toml  deploy.sh
templates/: agent-file-template.md  plan-template.md  (+2 more)
(+973 files in other folders)
